fixes #13131 Use Map.of() instead of Collections.emptyMap() in unit test